Bug 203593: Memory leak of 672 bytes from 4 blocks allocated in PR_Malloc.

fixes some addrbook leak suckage and tidies up memory footprint a tad.

r=caillon, sr=dmose, a=asa.